@@ -5,6 +5,7 @@
 = GENI Portal Release Notes =
 
 == 2.27 ==
+ * Improve database password handling on map-related scripts (#1253)
 
 == 2.26 ==
  * Handle multi-valued attributes from Shibboleth (#740)
